# turbo-hearts

./: .gitattributes  .gitignore  Cargo.toml  README.md  auth.html  config.json  game.html  lobby.html  names.json  neural_net.py  schema.sql
.actionspanel/: buttons.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  push.yml  release.yml
api/: Cargo.toml
api/benches/: trick.rs
api/examples/: can_claim.rs
api/src/: bot.rs  card.rs  cards.rs  charge_state.rs  claim_state.rs  done_state.rs  error.rs  game.rs  game_api.rs  game_event.rs  game_phase.rs  game_state.rs  lib.rs  lobby.rs  lobby_api.rs  player.rs  rank.rs  scores.rs  seat.rs  seed.rs  sql_types.rs  suit.rs  suits.rs  summary_api.rs  trick.rs  types.rs  void.rs  won_state.rs
assets/: README.md  follow-model.onnx  game.js  lead-model.onnx  lobby.js
assets/auth/: index.html
assets/lobby/: index.html
bot/: Cargo.toml
bot/benches/: inference.rs
bot/examples/: brute_force.rs  play_one.rs  simulate.rs
bot/src/: brute_force.rs  duck.rs  encoder.rs  gottatry.rs  hand_maker.rs  heuristic.rs  lib.rs  neural_network.rs  random.rs  simulate.rs  transposition_table.rs  void.rs
data/train/follow/: 1607493062202.tfrec  1607530031322.tfrec  1607551884139.tfrec
data/train/lead/: 1607493062202.tfrec  1607530031322.tfrec  1607551884139.tfrec
data/validate/follow/: 1607493062202.tfrec  1607530031322.tfrec  1607551884139.tfrec
data/validate/lead/: 1607493062202.tfrec  1607530031322.tfrec  1607551884139.tfrec
fe/: README.md  package.json  tsconfig.json
fe/src/: const.ts  fullGame.ts  hiddenGame.ts  index.html  index.tsx  test.ts  types.ts
fe/src/events/: ChargeEvent.ts  DealEvent.ts  EndTrickEvent.ts  PlayEvent.ts  ReceivePassEvent.ts  SendPassEvent.ts  SitEvent.ts  StartChargingEvent.ts  StartPassingEvent.ts  StartTrickEvent.ts  YourPlayEvent.ts  groupCards.ts  handAccessors.ts  handPositions.ts  helpers.ts  playerAccessors.ts
fe/src/events/animations/: animations.ts
fe/src/game/: TurboHearts.ts  sortCards.ts
fe/src/styles/: style.scss
fe/src/styles/modules/: Hand.scss  PlayerInfo.scss  Table.scss
fe/src/ui/: Button.ts  Hand.tsx  PlayerInfo.tsx  Table.tsx
fe/src/util/: array.ts  charges.ts
fe/webpack/: webpack.dev.js  webpack.prod.js
scripts/: make-dist.sh
server/: Cargo.toml
server/src/: asset_endpoints.rs  auth.rs  auth_endpoints.rs  bot.rs  db.rs  error.rs  game.rs  game_endpoints.rs  lobby.rs  lobby_endpoints.rs  main.rs  sender.rs  subscriber.rs  summary.rs  test.rs  user.rs  user_endpoints.rs
server/src/auth_endpoints/: fusion.rs  github.rs  google.rs
server/src/game/: endpoints.rs
server/src/lobby/: endpoints.rs  event.rs
src/: auth.rs  bot.rs  card.rs  cards.rs  config.rs  db.rs  endpoint.rs  error.rs  game.rs  games.rs  hacks.rs  lobby.rs  macros.rs  main.rs  player.rs  publish.rs  rank.rs  scores.rs  seat.rs  seed.rs  server.rs  sql_types.rs  subscribe.rs  suit.rs  suits.rs  summary.rs  test.rs  types.rs  user.rs  util.rs
src/auth/: endpoints.rs  fusion.rs  google.rs
src/bot/: duck.rs  gottatry.rs  heuristic.rs  random.rs  simulate.rs  void.rs
src/endpoint/: game.rs  lobby.rs
src/game/: charge.rs  claim.rs  done.rs  endpoints.rs  event.rs  id.rs  phase.rs  state.rs  trick.rs
src/lobby/: endpoints.rs  event.rs
trainer/: Cargo.toml
trainer/examples/: tfrecord_generator.rs
trainer/src/: main.rs
turbo-hearts-api/: Cargo.toml
turbo-hearts-api/benches/: game_state.rs  trick.rs
turbo-hearts-api/examples/: simulate.rs
turbo-hearts-api/src/: bot.rs  card.rs  cards.rs  error.rs  game.rs  lib.rs  player.rs  seed.rs  sql_types.rs  suit.rs
turbo-hearts-api/src/bot/: duck.rs  gottatry.rs  heuristic.rs  random.rs  simulate.rs  void.rs
turbo-hearts-api/src/game/: charge.rs  claim.rs  done.rs  phase.rs  sender.rs  state.rs  trick.rs  won.rs
turbo-hearts-server/: Cargo.toml
turbo-hearts-server/src/: assets.rs  auth.rs  error.rs  game.rs  lobby.rs  main.rs  summary.rs  test.rs
turbo-hearts-server/src/auth/: endpoints.rs  github.rs
turbo-hearts-server/src/lobby/: endpoints.rs
turbo-hearts-server/src/user/: endpoints.rs
