[package]
name = "turbo-hearts"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
env_logger = { version = "*", default-features = false, features = ["humantime"] }
log = "*"
rand = "*"
r2d2 = "*"
r2d2_sqlite = "*"
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "*", features = ["macros", "rt-threaded"] }
uuid = { version = "*", features = ["serde", "v4"] }
warp = { version = "*", default-features = false }

[dev-dependencies]
tempfile = "*"

[profile.release]
lto = true
codegen-units = 1
