[package]
name = "turbo-hearts"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
base64 = "*"
env_logger = { version = "*", default-features = false, features = ["humantime"] }
http = "*"
log = "*"
once_cell = "*"
rand = "*"
rand_distr = "*"
r2d2 = "*"
r2d2_sqlite = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "*", features = ["macros", "rt-threaded"] }
uuid = { version = "*", features = ["serde", "v4"] }
warp = { version = "*", default-features = false }

[dev-dependencies]
tempfile = "*"

[profile.release]
lto = "thin"
codegen-units = 2
