[package]
name = "turbo-hearts-api"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
log = "*"
rand = "*"
rand_chacha = "*"
serde = { version = "*", features = ["derive"] }
sha2 = "*"
thiserror = "*"
uuid = { version = "*", features = ["serde", "v4"] }

[dev-dependencies]
bincode = "*"
criterion = "*"
env_logger = { version = "*", default-features = false, features = ["humantime"] }
serde_test = "*"
tempfile = "*"

[[bench]]
name = "trick"
harness = false

[[bench]]
name = "game_state"
harness = false
