[package]
name = "turbo-hearts-bot"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
log = "*"
rand = { version = "*", features = ["small_rng"] }
tokio = { version = "*", features = ["blocking", "macros", "parking_lot", "rt-threaded", "sync"] }
turbo-hearts-api = { path = "../api" }
