[package]
name = "turbo-hearts-bot"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
log = "*"
once_cell = "*"
rand = "*"
tract-onnx = "*"
tokio = { version = "*", features = ["blocking", "macros", "parking_lot", "rt-threaded", "sync"] }
turbo-hearts-api = { path = "../api" }

[dev-dependencies]
env_logger = { version = "*", default-features = false, features = ["humantime"] }
