[package]
name = "turbo-hearts-bot"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
log = "*"
once_cell = "*"
rand = "*"
tract-onnx = "*"
turbo-hearts-api = { path = "../api" }

[dev-dependencies]
criterion = "*"
env_logger = { version = "*", default-features = false, features = ["humantime"] }

[[bench]]
name = "inference"
harness = false
