[package]
name = "turbo-hearts"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
base64 = "*"
env_logger = { version = "*", default-features = false, features = ["humantime"] }
futures-util = "*"
http = "*"
log = "*"
once_cell = "*"
rayon = "*"
r2d2 = "*"
r2d2_sqlite = "*"
rand = "*"
rand_distr = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "1", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-stream = "*"
turbo-hearts-api = { path = "../api" }
turbo-hearts-bot = { path = "../bot" }
uuid = { version = "*", features = ["serde", "v4"] }
warp = { version = "*", default-features = false }

[dev-dependencies]
tempfile = "*"
