[package]
name = "turbo-hearts-trainer"
version = "0.1.0"
authors = ["Tim Wilson <twilson@palantir.com>"]
edition = "2018"

[dependencies]
bincode = "*"
ctrlc = "*"
env_logger = { version = "*", default-features = false, features = ["humantime"] }
flate2 = "*"
log = "*"
rand = { version = "*" }
turbo-hearts-api = { path = "../api" }
turbo-hearts-bot = { path = "../bot" }

[dev-dependencies]
tfrecord = "*"
